bizinikiwi/pezframe/support/test/tests/pezpallet_ui/pezpallet_invalid_arg.stderr
error: Invalid pezpallet macro call: unexpected attribute. Macro call must be bare, such as `#[pezframe_support::pezpallet]` or `#[pezpallet]`, or must specify the `dev_mode` attribute, such as `#[pezframe_support::pezpallet(dev_mode)]` or #[pezpallet(dev_mode)].
  --> tests/pezpallet_ui/pezpallet_invalid_arg.rs:18:31
   |
18 | #[pezframe_support::pezpallet(foo)]
   |                               ^^^
